<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">请输入播放视频的URL</string>
    <string name="sBackButton">返回</string>
    <string name="sRefreshButton">刷新</string>
    <string name="sTime">00:00</string>
    <string name="sVideoLoading">视频加载中，请稍后…</string>
    <string name="sVideoBuffering">视频缓冲中…</string>
    <string name="play_video_error">无法播放此视频</string>
    <string name="error_video_url">视频地址获取失败,无法播放当前视频</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>
    <string name="done">完成</string>
    <string name="clear">清除</string>
    <string name="app_name">飞影</string>
    <string name="feilai">飞来</string>
    <string name="feiqu">飞去</string>
    <string name="home">首页</string>
    <string name="channel">频道</string>
    <string name="more">更多</string>
    <string name="no_more">没有更多</string>
    <string name="detail">详情</string>
    <string name="time">时长：</string>
    <string name="size">大小：</string>
    <string name="channel_2">频道：</string>
    <string name="play">播放</string>
    <string name="share">分享</string>
    <string name="fav">收藏</string>
    <string name="delete">删除</string>
    <string name="unfavor">取消收藏</string>
    <string name="movie">电影</string>
    <string name="video">视频</string>
    <string name="tv_series">电视剧</string>
    <string name="information">资讯</string>
    <string name="fun">搞笑</string>
    <string name="music">音乐</string>
    <string name="sports">体育</string>
    <string name="fashion">时尚</string>
    <string name="entertainment">娱乐</string>
    <string name="variety">综艺</string>
    <string name="actor">主演：</string>
    <string name="director">导演：</string>
    <string name="description">简介</string>
    <string name="region">地区：</string>
    <string name="release_date">年份：</string>
    <string name="series">剧集：</string>
    <string name="play_count">观看：</string>
    <string name="share_count">分享：</string>
    <string name="fav_count">收藏：</string>
    <string name="search">搜索</string>
    <string name="search_video_lib">搜索视频库</string>
    <string name="prev_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="loading">正在加载..</string>
    <string name="set_account_title">设置飞影账号</string>
    <string name="register_title">注册飞影账号</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="login">登录</string>
    <string name="logining">正在登录..</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="number_cannot_be_null">手机号码不能为空！</string>
    <string name="pwd_cannot_be_null">密码不能为空！</string>
    <string name="login_success">登录成功！</string>
    <string name="wrong_username_pwd">用户名或密码错误！</string>
    <string name="server_error">飞影服务暂时无法使用，请稍后再试！</string>
    <string name="getting_auth_code">正在获取验证码..</string>
    <string name="session_timeout_reget_auth_code">验证码超时失效，请重新获取！</string>
    <string name="wrong_phone_number">手机号码不正确！</string>
    <string name="phone_number_existed">手机号码已存在，请直接登录！</string>
    <string name="input_sms_auth_code">请输入短信验证码</string>
    <string name="nextstep">下一步</string>
    <string name="cancel">取消</string>
    <string name="checking_auth_code">验证码验证中..</string>
    <string name="wrong_auth_code">验证码错误！</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_1">请输入确认密码</string>
    <string name="different_pwds">两次密码不一致！</string>
    <string name="registering">正在注册..</string>
    <string name="session_timeout_reregister">注册超时，请重新注册！</string>
    <string name="register_ok">恭喜您注册成功，返回登录页面进行登录</string>
    <string name="ok">确定</string>
    <string name="alert_title">飞影提示</string>
    <string name="getting_data">正在请求数据，请稍后..</string>
    <string name="get_data_failed">数据获取失败，请稍后重试！</string>
    <string name="add_fav_ok">收藏成功！</string>
    <string name="add_fav_failed">收藏失败，请稍后再试！</string>
    <string name="already_favored">已被收藏！</string>
    <string name="getting_fav_data">正在获取收藏信息...</string>
    <string name="del_fav_ok">取消收藏成功！</string>
    <string name="del_fav_failed">取消收藏失败，请稍后再试！</string>
    <string name="del_fav_request_info">确定取消收藏吗?</string>
    <string name="del_share_request_info">确定删除此分享视频吗？</string>
    <string name="server_operation_failed">操作失败，请稍后重试！</string>
    <string name="delete_ok">已删除！</string>
    <string name="deletion_failed">删除失败，请稍后再试！</string>
    <string name="receiver">接收者，多人请用逗号分隔</string>
    <string name="video_info">视频内容</string>
    <string name="user_message">留言</string>
    <string name="search_contacts">搜索联系人</string>
    <string name="select_contacts">选择联系人</string>
    <string name="no_receiver_found">没有接收者！</string>
    <string name="invalid_receiver">无效接收者：</string>
    <string name="pls_correct_receiver">\n请更正接收者，否则他们将无法收到分享。</string>
    <string name="sending_share">正在发送分享...</string>
    <string name="add_share_ok">分享成功！</string>
    <string name="add_share_failed">服务器出错，分享失败，请稍后再试！</string>
    <string name="episode_list">剧集列表</string>
    <string name="episode_num_x">第%d集</string>
    <string formatted="false" name="episode_from_x_to_y">%d到%d集</string>
    <string name="share_time">日期：</string>
    <string name="if_exit">是否退出？</string>
    <string name="exit">退出</string>
    <string name="from">来自：</string>
    <string name="to">分享给：</string>
    <string name="no_receivers">无接收者</string>
    <string name="account_setting">账号设置</string>
    <string name="publishing">热播中</string>
    <string name="pls_register_account">请登录后使用此功能！</string>
    <string name="register_before_using">您需要设置账号后才可以使用此功能。</string>
    <string name="not_registered">没有账号？请点击注册。</string>
    <string name="share_video">分享视频：</string>
    <string name="input_search_keyword">请输入搜索关键字！</string>
    <string name="no_search_result">很抱歉，没有搜索到结果</string>
    <string name="detect_new_version">发现新版本【%s】，\n是否升级？</string>
    <string name="upgrade">升级</string>
    <string name="about_p1">飞影为您提供高清、流畅的视频服务。您可包月看视频，免流量费，不占用原有套餐流量，随时随地欣赏丰富多彩的视频节目。</string>
    <string name="about_p2">飞影For Android Phone客户端是为Android手机用户精心打造的网络视频软件，通过细致贴心的界面设计、丰富多彩的视频节目、高清流畅的播放服务，为您带来不一样的在线视频观看体验！</string>
    <string name="about_p3">安徽联通用户请发送DZFY(5元/月)到1065583398订购飞影业务;退订飞影业务发送TDFY到1065583398。</string>
    <string name="copy_right">安徽联通  版权所有</string>
    <string name="hot_keywords">热门搜索</string>
    <string name="feedback_info">感谢您使用飞影Android应用，如果您在使用过程中遇到任何不便或有意见与建议，都欢迎您反馈给我们。</string>
    <string name="input_ur_comment">内容</string>
    <string name="comment_hint">不超过500字</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="contact_way">联系方式(手机/Email)</string>
    <string name="pls_input_feedback_comment">请填写反馈内容！</string>
    <string name="submitting_feedback">正在提交反馈...</string>
    <string name="feedback_submit_ok">反馈提交成功，感谢您的支持！</string>
    <string name="select_type">选择类型</string>
    <string name="open_business_info">您尚未开通飞影服务，开通飞影5元包月套餐，即可看视频免流量费，不占用原有套餐流量。</string>
    <string name="open_business">立即开通</string>
    <string name="not_open_now">暂不开通</string>
    <string name="non_login_user_play_video_alert_info">您尚未登录,若继续观看，将占用您的套餐内流量。登录请点击账号设置。</string>
    <string name="unopen_user_play_video_alert_info">您尚未开通飞影服务，开通飞影5元包月套餐，即可看视频免流量费，不占用原有套餐流量。若继续观看，将占用您的套餐内流量。开通请点击账号设置。</string>
    <string name="still_play">继续观看</string>
    <string name="processing_user_play_video_alert_info">您的开通申请正在处理中，继续观看将占用流量。</string>
    <string name="business_processing">您的开通申请正在处理中，请稍后重试，或收到系统确认短信后重新登录。</string>
    <string name="business_open_req_submitted">您的开通申请已提交，系统后台正在处理。</string>
    <string name="submitting_open_request">正在提交开通申请...</string>
    <string name="submit_failed">申请提交失败，请检查您的网络或手机账户余额！</string>
    <string name="account_need_relogin">您的账号上次登录已失效，请重新设置账号！</string>
    

</resources>