<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginBottom="8dip"
        android:background="@drawable/title_bar_bg"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/login_exit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onExit"
            android:text="@string/exit"
            android:textColor="@drawable/bt_fg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_account_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onRegister"
            android:text="@string/register"
            android:textColor="@drawable/bt_fg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>