<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginBottom="8dip"
        android:background="@drawable/title_bar_bg"
        android:paddingTop="10dip" >

        <Button
            android:id="@+id/reglogin_exit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onExit"
            android:text="@string/exit"
            android:textColor="@drawable/bt_fg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_account_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reglogin_get_auth_code_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:visibility="visible" >

        <EditText
            android:id="@+id/reglogin_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:singleLine="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onGetAuthCode"
            android:text="@string/get_auth_code" />
    </LinearLayout>

</LinearLayout>