<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_bar_bg"
        android:paddingTop="10dip" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onBack"
            android:text="@string/sBackButton"
            android:textColor="@drawable/bt_fg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/feedback_info"
                android:textColor="@color/white"
                android:textSize="16dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:text="@string/select_type"
                    android:textColor="@color/orange"
                    android:textSize="16dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:text=":"
                    android:textColor="@color/orange"
                    android:textSize="16dip" />

                <Spinner
                    android:id="@+id/feedback_types_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_type" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/contact_way"
                android:textColor="@color/orange"
                android:textSize="16dip" />

            <EditText
                android:id="@+id/feedback_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_ur_comment"
                    android:textColor="@color/orange"
                    android:textSize="16dip" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/feedback_chars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/500" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/feedback_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="500"
                android:maxLines="5"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip"
                android:background="@drawable/bt_long_bg"
                android:onClick="onSubmit"
                android:text="@string/submit_feedback"
                android:textColor="@drawable/bt_fg" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>