<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/share_editor_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar_bg"
        android:paddingTop="10dip" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onBack"
            android:text="@string/sBackButton"
            android:textColor="@drawable/bt_fg" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onSendShare"
            android:text="@string/share"
            android:textColor="@drawable/bt_fg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/share_editor_receiver_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toLeftOf="@+id/share_editor_add_contact_bt"
            android:hint="@string/receiver"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/share_editor_add_contact_bt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/bt_short_bg"
            android:onClick="onSelectContact"
            android:src="@drawable/add_contact" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/video_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/share_editor_video_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:text="Video introduction"
        android:textSize="18dip" />

    <EditText
        android:id="@+id/share_editor_user_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/user_message"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="5"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical" >
    </EditText>

</LinearLayout>